# markon

./: .gitattributes  .gitignore  LICENSE  PRIVACY.md  README.md  appxmanifest.xml  commitlint.config.js  electron-builder.json5  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: optimize.md
electron/main/: index.ts
electron/preload/: index.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/deb/: postinst  postrm
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DrawingOverlay.vue  SettingsPanel.vue  SettingsView.vue  TextBox.vue
src/composables/: useDrawing.ts
src/types/: app.d.ts  electron.d.ts
